# turbo-fishstick

./: .gitignore  Dockerfile  README.md  pyproject.toml
deployment/: Dockerfile  build.sh  entrypoint.sh  kill.sh  run.sh
deployment/aws/: .terraform.lock.hcl  main.tf  variables.tf
deployment/local/: .terraform.lock.hcl  run-docker.tf
nginx/: nginx.conf
server/: manage.py  pyproject.toml  uwsgi.ini
server/turbo_fishstick/: settings.py  wsgi.py
server/turbo_fishstick/commute/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
server/turbo_fishstick/commute/migrations/: 0001_initial.py  0002_alter_tripvariant_name.py
server/turbo_fishstick/commute/templates/commute/: index.html
server/turbo_fishstick/turbo_fishstick/: asgi.py  settings.py  urls.py
turbo_fishstick/commute/: views.py
turbo_fishstick/commute/templates/commute/: index.html
turbo_fishstick/turbo_fishstick/: settings.py
web-ui/: .eslintrc.yaml  README.md  package-lock.json  package.json  tsconfig.json
web-ui/src/: App.vue  main.ts
web-ui/src/components/: TheWelcome.vue  WelcomeItem.vue
web-ui/src/components/__tests__/: HelloWorld.spec.ts
web-ui/src/router/: index.ts
web-ui/src/types/: commute-types.ts
web-ui/src/views/: CommuteView.vue
