[tool.poetry]
name = "turbo-fishstick"
version = "0.1.0"
description = "Just some random scribbles"
authors = ["Mateusz Krainski <mateusz@krainski.eu>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "turbo_fishstick"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.6"
mypy = "^0.991"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
types-requests = "^2.28.11.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
